manifests/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: dynamodb-access
      containers:
        - name: backend
          image: 074355429783.dkr.ecr.ap-northeast-1.amazonaws.com/eks-sample-202305-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
