manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: eks-handson-backend
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
