manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: eks-handson-frontend
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
